--- a/app/listaCursos/lista.html
+++ b/app/listaCursos/lista.html
@@ -1,24 +1,17 @@
-<div>
+<div></div>
     <div><h3>{{title}}</h3></div>
     <table class="small-offset-2 small-8 columns">
         <tr>
-            <th>Id</th>
+            <th></th>
             <th>Nome</th>
             <th>Categoria</th>
-            <th>Descrição</th>
             <th>Preço</th>
-            <th>Criação</th>
         </tr>
         <tr ng-repeat="(key, item) in listaCursos | orderBy: filter.SortColumn: true">
-            <td>{{item.id}}</td>
+            <td><img src="{{item.src_img}}"></td>
             <td><a ng-click="selectType(item)">{{item.nome}}</a></td>
             <td>{{item.categoria}}</td>
-            <td>{{item.descricao}}</td>
-            <td>R${{item.preco|number: 2}}</td>
-            <td>{{item.criacao}}</td>
-            
+            <td>R$ {{item.preco|number: 2}}</td>            
         </tr>
-
-
     </table>
 </div>
