Adicionado sql do banco

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,6 +2,8 @@
 <div class="large-offset-1 top-buffer">
     <h3>Cursos Inforgeneses</h3>
 
-    
+    <div>
+        <h4> Porjeto CompraDeCursos utilizando framework CodeIgniter, AngulasJS, com camada de frontend independente do backend (API REST + frontend).</h4>
+    </div>
 
 </div>
